-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
2
-
f5b5f16bf (dev), c9921d069 (6.9), 344450071 (tqtc/lts-6.8)
-
Foundation Sprint 129
Currently compiling Qt for Android fails if accessibility -feature is disabled.
- clones
-
QTBUG-135675 Compile Android without clipboard -feature
-
- Closed
-
- is cloned by
-
QTBUG-135722 Compile Android without desktopservices -feature
-
- Closed
-
-
QTBUG-135806 qtbase autotests to compile without draganddrop
-
- Closed
-
-
QTBUG-135890 Allow configuring Windows without clipboard feature
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135693 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 637799,6 | Make Qt for Android configurable without 'accessibility' support | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 641445,3 | Make Qt for Android configurable without 'accessibility' support | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 641728,2 | Make Qt for Android configurable without 'accessibility' support | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |