Make Qt for Android configurable without 'accessibility' support

The code was already partially behind the feature flag, but not fully.

Pick-to: 6.8
Fixes: QTBUG-135693
Change-Id: Iad76221837aa37b90b3be998afc41ce9bbc05c55
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit f5b5f16bfa0bf0889c1d77af3e9840e67a2e851c)