src/plugins/platforms/android/androidjnimain.cpp
@@ -10,7 +10,6 @@
 #include "androidcontentfileengine.h"
 #include "qandroidapkfileengine.h"
 #include "androiddeadlockprotector.h"
-#include "androidjniaccessibility.h"
 #include "androidjniinput.h"
 #include "androidjnimain.h"
 #include "androidjnimenu.h"
@@ -20,6 +19,9 @@
 #include "qandroidplatformdialoghelpers.h"
 #include "qandroidplatformintegration.h"
 #include "qandroidplatformclipboard.h"
+#if QT_CONFIG(accessibility)
+#include "androidjniaccessibility.h"
+#endif
 #include "qandroidplatformwindow.h"
 
 #include <android/api-level.h>
@@ -91,7 +93,9 @@ static const char m_methodErrorMsg[] = "Can't find method \"%s%s\"";
 
 Q_CONSTINIT static QBasicAtomicInt startQtAndroidPluginCalled = Q_BASIC_ATOMIC_INITIALIZER(0);
 
+#if QT_CONFIG(accessibility)
 Q_DECLARE_JNI_CLASS(QtAccessibilityInterface, "org/qtproject/qt/android/QtAccessibilityInterface");
+#endif
 
 namespace QtAndroid
 {
@@ -192,6 +196,7 @@ namespace QtAndroid
         return true;
     }
 
+#if QT_CONFIG(accessibility)
     void initializeAccessibility()
     {
         m_backendRegister->callInterface<QtJniTypes::QtAccessibilityInterface, void>(
@@ -233,6 +238,7 @@ namespace QtAndroid
         m_backendRegister->callInterface<QtJniTypes::QtAccessibilityInterface, void>(
                 "notifyScrolledEvent", accessibilityObjectId);
     }
+#endif //QT_CONFIG(accessibility)
 
     void notifyNativePluginIntegrationReady(bool ready)
     {
@@ -810,7 +816,9 @@ static bool registerNatives(QJniEnvironment &env)
     success = success
         && QtAndroidInput::registerNatives(env)
         && QtAndroidMenu::registerNatives(env)
+#if QT_CONFIG(accessibility)
         && QtAndroidAccessibility::registerNatives(env)
+#endif
         && QtAndroidDialogHelpers::registerNatives(env)
         && QAndroidPlatformClipboard::registerNatives(env)
         && QAndroidPlatformWindow::registerNatives(env)
