src/plugins/platforms/android/androidjnimain.h
@@ -53,6 +53,7 @@ namespace QtAndroid
     jobject createBitmap(int width, int height, QImage::Format format, JNIEnv *env);
     jobject createBitmapDrawable(jobject bitmap, JNIEnv *env = nullptr);
 
+#if QT_CONFIG(accessibility)
     void initializeAccessibility();
     void notifyAccessibilityLocationChange(uint accessibilityObjectId);
     void notifyObjectHide(uint accessibilityObjectId, uint parentObjectId);
@@ -60,6 +61,7 @@ namespace QtAndroid
     void notifyObjectFocus(uint accessibilityObjectId);
     void notifyValueChanged(uint accessibilityObjectId, jstring value);
     void notifyScrolledEvent(uint accessibilityObjectId);
+#endif
     void notifyNativePluginIntegrationReady(bool ready);
 
     const char *classErrorMsgFmt();
